[package]
name = "os_rust"
version = "0.1.0"
authors = ["willson0v0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv", features = ["inline-asm"] }

# abort on panic
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"